syntax = "proto3";

package Server;

option go_package = "./go_protocol_buffer";

message ShareGroup {
    uint64 id = 1;
    string linkId = 2;
    double destLng = 3;
    double destLat = 4;
    repeated User users = 5;
    string meetingTime = 6;
  }

message User {
    uint64 id = 1;
    string name = 2;
    ShareGroup shareGroup = 3;
}

message AnonymousSignUpRequest {
    string name = 1;
}

message AnonymousSignUpResponse {
    User user = 1;
    string accessToken = 2;
}

message CreateShareGroupRequest {
    double destLng = 3;
    double destLat = 4;
    string meetingTime = 5;
}

message CreateShareGroupResponse {
    ShareGroup shareGroup = 1;
}

service Service {
    rpc AnonymousSignUp (AnonymousSignUpRequest) returns (AnonymousSignUpResponse);
    rpc CreateShareGroup (CreateShareGroupRequest) returns (CreateShareGroupResponse);
}